# deployments

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json
.github/: dependabot.yaml  renovate-config.json  renovate-entrypoint.sh
.github/workflows/: docs.yml  helm-publish.yml  kubesec.yml  pre-commit.yml  release-please.yml  renovate.yml  scorecard.yml
configs/kueue/: README.md  developer.md
configs/kueue/dev/: clusterQueue.config.yaml  configuration.yaml  controller.yaml  dashboard.json  localQueue.config.yaml  servicemonitor.yaml  values.yaml
configs/kueue/dev/kueuer/: Dockerfile  pyproject.toml
configs/kueue/dev/kueuer/src/kueuer/: __init__.py  cli.py  job.py
configs/kueue/dev/kueuer/src/kueuer/benchmarks/: benchmark.py  job.yaml  launch.py  plot.py  track.py
configs/kueue/dev/kueuer/src/kueuer/benchmarks/kubectl/: benchmark.py  job.yaml  launcher.py  plot.py  track.py  tracker.py
configs/kueue/dev/kueuer/src/kueuer/benchmarks/skaha/: stress.py
configs/kueue/dev/kueuer/src/kueuer/jobs/: benchmark.py  launcher.py
configs/kueue/grafana/: dashboard.json
configs/kueue/kueuer/: .gitignore  Dockerfile  README.md  pyproject.toml
configs/kueue/prod/: clusterQueue.config.yaml  values.yaml
docs/: index.md
docs/helm/: base.md  canfar.md  cavern.md  posix-mapper.md  science-portal.md  skaha.md  storage-ui.md
docs/operations/: ci-cd-architecture.md  ci-cd.md  index.md  release-process.md
docs/stylesheets/: extra.css
helm/applications/base/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/applications/base/templates/: _helpers.tpl  general-user-clusterrole-rbac.yaml  jobs-clusterrole-rbac.yaml  namespaces.yaml  server-secrets.yaml  skaha-general-workload-binding-rbac.yaml
helm/applications/canfar/: README.md
helm/applications/canfar-next/science-portal/: Chart.yaml  values.yaml
helm/applications/cavern/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/applications/cavern/config/: cadc-registry.properties  cavern.properties
helm/applications/cavern/templates/: NOTES.txt  cavern-tomcat-deployment.yaml  postgres-config.yaml  postgres-deploy.yaml
helm/applications/posix-mapper/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/applications/posix-mapper/config/: cadc-log.properties  cadc-registry.properties  catalina.properties  posix-mapper.properties  war-rename.conf
helm/applications/posix-mapper/templates/: NOTES.txt  posix-mapper-configmap.yaml  posix-mapper-ingress.yaml  posix-mapper-secrets.yaml  posix-mapper-tomcat-deployment.yaml  posix-mapper-tomcat-expose.yaml  postgres-config.yaml  postgres-deploy.yaml  postgres-service.yaml
helm/applications/science-portal/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/applications/science-portal/config/: cadc-registry.properties  catalina.properties  org.opencadc.science-portal.properties  war-rename.conf
helm/applications/science-portal/templates/: science-portal-config-configmap.yaml  science-portal-ingress.yaml  science-portal-tomcat-deployment.yaml  science-portal-tomcat-expose.yaml
helm/applications/skaha/: CHANGELOG.md  Chart.yaml  README.md  sample-local-values.yaml  values.yaml
helm/applications/skaha/config/: cadc-registry.properties
helm/applications/skaha/desktop-template/: start-software-sh.template
helm/applications/skaha/image-cache/: cache-images.sh
helm/applications/skaha/init-users-datasets-symlink-config/: init-users-datasets-symlink.sh
helm/applications/skaha/init-users-groups-config/: init-users-groups.sh
helm/applications/skaha/launch-scripts/: skaha-carta.sh
helm/applications/skaha/skaha-config/: ingress-carta.yaml  ingress-contributed.yaml  ingress-desktop.yaml  ingress-firefly.yaml  ingress-notebook.yaml  k8s-resources.json  launch-carta-legacy.yaml  launch-carta.yaml  launch-contributed.yaml  launch-desktop-app.yaml  launch-desktop.yaml  launch-firefly.yaml  launch-headless.yaml  launch-notebook.yaml  service-carta-legacy.yaml
helm/applications/skaha/templates/: NOTES.txt  _helpers.tpl  add-user-config-configmap.yaml  desktop-template-configmap.yaml  image-caching-cronjob.yaml  init-users-datasets-symlink-configmap.yaml  init-users-groups-configmap.yaml  launch-scripts-configmap.yaml  limit-range.yaml  (+8 more)
helm/applications/sshd/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/applications/storage-ui/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/applications/utils/: CHANGELOG.md  Chart.yaml
helm/common/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/common/templates/: _common_image.tpl
src/deployments/: __init__.py  cli.py  inventory.py  maintainers.py  release_matrix.py
tests/: __init__.py  test_release_matrix.py
(+40 files in other folders)
